# compiler

./: .gitignore  CMakeLists.txt  README  bytecode.cpp  bytecode.hpp  bytecode_data.hpp  bytecode_emitter.cpp  bytecode_emitter.hpp  c_emitter.cpp  c_emitter.hpp  common.cpp  common.hpp  environment.hpp  expr.cpp  expr.hpp  graph.cpp  graph.hpp  ir.cpp  ir.hpp  lexer.hpp  linear_allocator.h  log.cpp  log.hpp  main.cpp  parser.cpp  parser.hpp  resolve.cpp  resolve.hpp  scope.hpp  sema.cpp  sema.hpp  stmt.cpp  stmt.hpp  template.hpp  token.cpp  token.hpp  type.cpp  type.hpp  typechecker.cpp  typechecker.hpp
example/: c_test.tpz  current.tpz  example.tpz  expression.tpz  proc.tpz  scope.tpz
